[package]
name = "luminol-filesystem"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
rfd.workspace = true

color-eyre.workspace = true
thiserror.workspace = true
bitflags.workspace = true

camino.workspace = true

itertools.workspace = true

dashmap.workspace = true
parking_lot.workspace = true
futures-lite.workspace = true
async-std.workspace = true
pin-project.workspace = true

egui.workspace = true

ron.workspace = true
rust-ini.workspace = true

tracing.workspace = true

luminol-config.workspace = true

rand.workspace = true

iter-read = "1.0.1"
async_io_stream = "0.3.3"

qp-trie.workspace = true
slab.workspace = true

[target.'cfg(windows)'.dependencies]
winreg = "0.51.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tempfile.workspace = true
async-fs = "2.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
once_cell.workspace = true

luminol-web = { version = "0.4.0", path = "../web/" }

flume.workspace = true
oneshot.workspace = true

wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
web-sys = { workspace = true, features = [
    "Blob",
    "File",
    "FileSystemCreateWritableOptions",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemGetDirectoryOptions",
    "FileSystemGetFileOptions",
    "FileSystemHandle",
    "FileSystemHandleKind",
    "FileSystemRemoveOptions",
    "FileSystemWritableFileStream",
    "WritableStream",

    "Element",
    "HtmlAnchorElement",
    "Navigator",
    "StorageManager",
    "Url",
    "Window",
] }
