[package]
name = "luminol-graphics"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"

egui.workspace = true
egui_extras.workspace = true
egui-wgpu.workspace = true
wgpu.workspace = true
glam.workspace = true

naga_oil = "0.11.0"
naga = "0.14.1"

once_cell.workspace = true
crossbeam.workspace = true
dashmap.workspace = true

anyhow.workspace = true

slab.workspace = true

bytemuck.workspace = true

itertools.workspace = true

camino.workspace = true

luminol-data.workspace = true
luminol-filesystem.workspace = true
