[package]
name = "luminol-graphics"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"

egui.workspace = true
luminol-egui-wgpu.workspace = true
wgpu.workspace = true
glam.workspace = true

naga.workspace = true
naga_oil.workspace = true

crossbeam.workspace = true
dashmap.workspace = true
parking_lot.workspace = true

color-eyre.workspace = true

bytemuck.workspace = true

itertools.workspace = true

camino.workspace = true

luminol-data.workspace = true
luminol-filesystem.workspace = true
luminol-macros.workspace = true

fragile.workspace = true
