[package]
name = "luminol-graphics"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# * Window management, graphical user interface and 3D rendering * #
egui.workspace = true
luminol-egui-wgpu.workspace = true

wgpu.workspace = true
naga.workspace = true
naga_oil.workspace = true

image = "0.24.7"

# * Mathematics * #
glam.workspace = true
bytemuck.workspace = true

# * Logging and diagnostics * #
color-eyre.workspace = true

# * More efficient implementations of individual components of Rust's Standard Library * #
parking_lot.workspace = true
crossbeam.workspace = true
dashmap.workspace = true

# * Tools to aid concurrent programming * #
fragile.workspace = true

# * File system interfaces * #
camino.workspace = true

# * Luminol's crates * #
luminol-data.workspace = true
luminol-filesystem.workspace = true
luminol-macros.workspace = true

# * Misc. * #
itertools.workspace = true
