[package]
name = "luminol-audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.17.1"

rustysynth = "1.3.1"

strum.workspace = true
parking_lot.workspace = true
camino.workspace = true
once_cell.workspace = true
