[package]
name = "luminol-audio"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.17.1"

rustysynth = "1.3.1"

strum.workspace = true
parking_lot.workspace = true
camino.workspace = true
once_cell.workspace = true

luminol-filesystem.workspace = true
