[package]
name = "luminol-components"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
luminol-data = { version = "*", path = "../luminol-data/" }
luminol-graphics = { version = "*", path = "../luminol-graphics/" }

egui.workspace = true
strum.workspace = true
