[package]
name = "luminol-components"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
luminol-audio = { version = "0.1.0", path = "../luminol-audio/" }
luminol-core = { version = "0.1.0", path = "../luminol-core/" }
luminol-data = { version = "0.1.0", path = "../luminol-data/" }
luminol-graphics = { version = "0.1.0", path = "../luminol-graphics/" }
luminol-filesystem = { version = "0.1.0", path = "../luminol-filesystem/" }

egui.workspace = true
strum.workspace = true

egui-wgpu.workspace = true

wgpu.workspace = true
glam.workspace = true

syntect = "5.1.0"

parking_lot.workspace = true

itertools.workspace = true

serde.workspace = true

once_cell.workspace = true
slab.workspace = true
