[package]
name = "luminol-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-ini = "0.19.0"

serde.workspace = true

strum.workspace = true
ron.workspace = true

once_cell.workspace = true

luminol-data = { version = "0.1.0", path = "../luminol-data/" }
