[package]
name = "luminol-core"
version = "0.1.0"
edition = "2021"
description = "Core luminol traits and data types"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui.workspace = true

egui_dock = "0.7.3"
egui-notify = "0.9.0"

parking_lot.workspace = true

thiserror.workspace = true
camino.workspace = true
bitflags.workspace = true

strum.workspace = true
serde.workspace = true

luminol-audio = { version = "0.1.0", path = "../luminol-audio/" }
luminol-config = { version = "0.1.0", path = "../luminol-config/" }
luminol-data = { version = "0.1.0", path = "../luminol-data/" }
luminol-filesystem = { version = "0.1.0", path = "../luminol-filesystem/" }
luminol-graphics = { version = "0.1.0", path = "../luminol-graphics/" }
