[package]
name = "luminol-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-derive = "0.4.0"
num_enum = "0.7.0"

rand = "0.8.5"
flate2 = "1.0"

serde.workspace = true
alox-48.workspace = true
bytemuck.workspace = true
slab.workspace = true
strum.workspace = true
paste.workspace = true
camino.workspace = true

luminol-core = { version = "0.1.0", path = "../luminol-core/" }
