[package]
name = "luminol-filesystem"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfd.workspace = true

thiserror.workspace = true
bitflags.workspace = true

camino.workspace = true

itertools.workspace = true

dashmap.workspace = true
parking_lot.workspace = true

egui.workspace = true

serde.workspace = true
alox-48.workspace = true
ron.workspace = true
rust-ini = "0.19.0"

luminol-config.workspace = true

[target.'cfg(windows)'.dependencies]
winreg = "0.51.0"
