[package]
name = "luminol-graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
luminol-data = { version = "*", path = "../luminol-data/" }

image = "0.24.7"

glam = { version = "0.24.2", features = ["bytemuck"] }

egui.workspace = true
egui-wgpu.workspace = true
wgpu.workspace = true

once_cell.workspace = true
crossbeam.workspace = true
dashmap.workspace = true

slab.workspace = true

bytemuck.workspace = true

itertools.workspace = true
