[package]
name = "luminol-graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"

const_format = "0.2.32"

egui.workspace = true
egui_extras.workspace = true
egui-wgpu.workspace = true
wgpu.workspace = true
glam.workspace = true

once_cell.workspace = true
crossbeam.workspace = true
dashmap.workspace = true

slab.workspace = true

bytemuck.workspace = true

itertools.workspace = true

camino.workspace = true

luminol-data = { version = "0.1.0", path = "../luminol-data/" }
luminol-filesystem = { version = "0.1.0", path = "../luminol-filesystem/" }
