[package]
name = "luminol-modals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui.workspace = true

camino.workspace = true

luminol-core = { version = "0.1.0", path = "../luminol-core/" }
luminol-data = { version = "0.1.0", path = "../luminol-data/" }
luminol-components = { version = "0.1.0", path = "../luminol-components" }
