[package]
name = "luminol-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
luminol-core = { version = "0.1.0", path = "../luminol-core/" }
luminol-config = { version = "0.1.0", path = "../luminol-config/" }
luminol-data = { version = "0.1.0", path = "../luminol-data/" }
luminol-graphics = { version = "0.1.0", path = "../luminol-graphics/" }
luminol-filesystem = { version = "0.1.0", path = "../luminol-filesystem/" }
luminol-components = { version = "0.1.0", path = "../luminol-components/" }

egui.workspace = true
egui_extras.workspace = true

catppuccin-egui = "3.1.0"

strum.workspace = true

git-version = "0.3.5"
