[package]
name = "luminol-ui"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
luminol-audio.workspace = true
luminol-core.workspace = true
luminol-config.workspace = true
luminol-data.workspace = true
luminol-graphics.workspace = true
luminol-filesystem.workspace = true
luminol-components.workspace = true
luminol-term.workspace = true
luminol-modals.workspace = true

egui.workspace = true
egui_extras.workspace = true

catppuccin-egui = "3.1.0"

strum.workspace = true

git-version = "0.3.5"

poll-promise.workspace = true
futures = "0.3.28"
reqwest = "0.11.22"

zip = { version = "0.6.6", default-features = false, features = ["deflate"] }

itertools.workspace = true

anyhow.workspace = true
