[package]
name = "luminol-web"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui.workspace = true
eframe.workspace = true
egui-wgpu.workspace = true
wgpu.workspace = true

ron.workspace = true

once_cell.workspace = true

tracing.workspace = true

luminol-app.workspace = true

flume = "0.11.0"

wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4"

portable-atomic = { version = "1.5.1", features = ["float"] }

js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "DomException",

    "EventTarget",
    "EventListener",
    "AddEventListenerOptions",

    "Event",
    "MouseEvent",

    "DedicatedWorkerGlobalScope",
    "WorkerGlobalScope",

    "Worker",
    "WorkerOptions",
    "WorkerType",

    "Performance",

    "HtmlCanvasElement",
    "OffscreenCanvas",
    "OffscreenCanvasRenderingContext2d",

    "MutationObserver",
    "MutationObserverInit",
    "MutationRecord",
    "Node",

    "Clipboard",

    "Storage",

    "WorkerLocation",
    "Location",
    "WorkerNavigator",
    "Navigator",
] }
