[package]
name = "luminol"
description = "Luminol is a FOSS recreation of RPG Maker XP in Rust with love ❤️"
build = "build.rs"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe.workspace = true
egui.workspace = true
egui_extras.workspace = true
epaint.workspace = true

rfd.workspace = true

parking_lot.workspace = true
once_cell.workspace = true

image.workspace = true

steamworks = { version = "0.10.0", optional = true }
crc = { version = "3.0.1", optional = true }

tracing-subscriber = "0.3.17"
color-backtrace = "0.6.0"

luminol-audio.workspace = true
luminol-core.workspace = true
luminol-config.workspace = true
luminol-data.workspace = true
luminol-filesystem.workspace = true
luminol-graphics.workspace = true
luminol-ui.workspace = true
luminol-term.workspace = true
# luminol-windows = { version = "0.1.0", path = "../luminol-windows/" }
# luminol-tabs = { version = "0.1.0", path = "../luminol-tabs/" }


poll-promise.workspace = true

camino.workspace = true

strum.workspace = true

tokio = "1.33" # *sigh*

[features]
steamworks = ["dep:steamworks", "crc"]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "Luminol.exe"
ProductName = "Luminol"
