[package]
name = "luminol-macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# * Luminol's crates * #
luminol-proc-macros.workspace = true

[lints]
workspace = true
