[package]
name = "luminol-modals"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui.workspace = true

camino.workspace = true

luminol-core.workspace = true
luminol-data.workspace = true
luminol-components.workspace = true
luminol-egui-wgpu.workspace = true
glam.workspace = true
color-eyre.workspace = true

fuzzy-matcher = "0.3.7"

ouroboros = "0.18.4"
